// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login actions Should call the \`getFeed\` action with success 1`] = `
Array [
  Object {
    "payload": true,
    "type": "TOOGLE_LOADING",
  },
  Object {
    "payload": Array [
      Object {
        "author": Object {
          "picture": "https://image.png",
          "username": "name",
        },
        "createdAt": "2019-09-22",
        "description": "description",
        "image": "https://image.png",
        "likesCount": 1,
        "userType": "organization",
      },
    ],
    "type": "SET_FEED",
  },
  Object {
    "payload": false,
    "type": "TOOGLE_LOADING",
  },
]
`;

exports[`Login actions Should call the \`getFeed\` action with success 2`] = `
Array [
  Object {
    "payload": true,
    "type": "TOOGLE_LOADING",
  },
  Object {
    "payload": false,
    "type": "TOOGLE_LOADING",
  },
]
`;
